--- a/drone_delivery_system/pages/Cart.html
+++ b/drone_delivery_system/pages/Cart.html
@@ -1,105 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="../assets/styles/global.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" />
+  <title>Shopping Cart | Drone Delivering System</title>
+</head>
+<body>
+  <div id="header"></div>
+  <div id="banner"></div>
+  <div class="container cart-form">
+    <!-- Cart Items and Summary will be rendered dynamically -->
+  </div>
+  <div id="footer"></div>
 
-    <link rel="stylesheet" href="../assets/styles/global.css" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
-    <title>Shop | Drone Delivering System</title>
-  </head>
-  <body>
-    <div id="header"></div>
-    <div id="banner"></div>
-    <div class="container my-5">
-      <h2 class="text-center">Shopping Cart</h2>
+  <script src="../js/cart.js"></script>
+  <script>
+    // Redirect if user is not logged in
+    const userId = localStorage.getItem("userId");
+    if (!userId) {
+      window.location.href = "/pages/signin.html";
+    }
 
-      <!-- Cart Items -->
-      <div class="cart-item mb-4 border p-3 rounded">
-        <div class="d-flex justify-content-between">
-          <div class="row">
-            <div class="col-md-2">
-              <img
-                src="/assets/images/headphones.png"
-                alt="Product Image"
-                class="img-fluid rounded"
-              />
-            </div>
-            <div class="col-md-3">
-              <h5>Product Name 1</h5>
-              <p class="card-text">
-                Experience high-quality sound designed for comfort and style.
-              </p>
-              <p>$10.00</p>
-            </div>
-          </div>
-          <div class="text-center align-items-end">
-            <button class="btn btn-danger btn-sm">Remove</button>
-          </div>
-        </div>
-      </div>
+  // Retrieve cart data from localStorage
+const cartData = localStorage.getItem('cart');
 
-      <div class="cart-item mb-4 border p-3 rounded">
-        <div class="d-flex justify-content-between">
-          <div class="row">
-            <div class="col-md-2">
-              <img
-                src="/assets/images/headphones.png"
-                alt="Product Image"
-                class="img-fluid rounded"
-              />
-            </div>
-            <div class="col-md-3">
-              <h5>Product Name 2</h5>
-              <p class="card-text">
-                Experience high-quality sound designed for comfort and style.
-              </p>
-              <p>$20.00</p>
-            </div>
-          </div>
-          <div class="text-center">
-            <button class="btn btn-danger btn-sm">Remove</button>
-          </div>
-        </div>
-      </div>
+// Parse the data if it exists, else use an empty array
+const cartItems = cartData ? JSON.parse(cartData) : [];
 
-      <!-- Cart Summary -->
-      <div class="row mt-4">
-        <div class="col-md-6">
-          <a href="../pages/Shop.html">
-            <button
-            class="btn btn-outline-primary buy-now-btn rounded-pill px-6 py-1"
-          >
-            Continue Shopping
-          </button>
-          </a>
-        </div>
-        <div class="col-md-6 text-end">
-          <h3>Total: $30.00</h3>
-          <a href="../pages/Checkout.html">
-          <button
-            class="btn btn-outline-success buy-now-btn rounded-pill px-6 py-1"
-          >
-            Proceed to Checkout
-          </button>
-        </a>
-        </div>
-      </div>
+// Select the container where cart items will be displayed
+const container = document.querySelector('.container');
+
+// Build the initial structure
+container.innerHTML = `
+  <h2 class="text-center">Shopping Cart</h2>
+  <div id="cart-items"></div>
+  <div class="row mt-4">
+    <div class="col-md-6">
+      <a href="../pages/Shop.html">
+        <button class="btn btn-outline-primary buy-now-btn rounded-pill px-6 py-1">
+          Continue Shopping
+        </button>
+      </a>
     </div>
-    <div id="footer"></div>
-    <script src="../js/cart.js"></script>
-    <script src="../js/shop.js"></script>
-    <script>
-       const userId = localStorage.getItem("userId");
-// Check if user is logged in
-if (!userId) {
-// If user is logged in, redirect to the home page
-window.location.href = "/pages/signin.html";
+    <div class="col-md-6 text-end">
+      <h3 id="total-price">Total: $0.00</h3>
+      <a href="../pages/Checkout.html">
+        <button class="btn btn-outline-success buy-now-btn rounded-pill px-6 py-1">
+          Proceed to Checkout
+        </button>
+      </a>
+    </div>
+  </div>
+`;
+
+// Reference to the cart items container
+const cartItemsContainer = document.getElementById('cart-items');
+
+// Reference to the total price display
+const totalPriceElement = document.getElementById('total-price');
+
+// Initialize the total price
+let totalPrice = 0;
+
+// Group items by name or ID and count quantities
+const groupedItems = {};
+cartItems.forEach(item => {
+  if (groupedItems[item.name]) {
+    groupedItems[item.name].quantity += 1;
+  } else {
+    groupedItems[item.name] = { ...item, quantity: 1 };
+  }
+});
+
+// Check if there are items in the cart
+if (Object.keys(groupedItems).length > 0) {
+  Object.values(groupedItems).forEach((item, index) => {
+    const itemDiv = document.createElement('div');
+    itemDiv.classList.add('cart-item', 'mb-4', 'border', 'p-3', 'rounded');
+    itemDiv.innerHTML = `
+      <div class="d-flex justify-content-between">
+        <div class="row">
+          <div class="col-md-2">
+            <img src="${item.image}" alt="Product Image" class="img-fluid rounded" />
+          </div>
+          <div class="col-md-4">
+            <h5>${item.name}</h5>
+            <p>Price: $${item.price.toFixed(2)}</p>
+            <p>Quantity: ${item.quantity}</p>
+            <p>Subtotal: $${(item.price * item.quantity).toFixed(2)}</p>
+          </div>
+        </div>
+        <div class="text-center">
+          <button class="btn btn-danger btn-sm remove-btn" data-name="${item.name}">Remove</button>
+        </div>
+      </div>
+    `;
+
+    // Append the item to the container
+    cartItemsContainer.appendChild(itemDiv);
+
+    // Update the total price
+    totalPrice += item.price * item.quantity;
+
+    // Add event listener to the remove button
+    itemDiv.querySelector('.remove-btn').addEventListener('click', () => {
+      // Remove all instances of the item
+      const updatedCart = cartItems.filter(cartItem => cartItem.name !== item.name);
+      localStorage.setItem('cart', JSON.stringify(updatedCart));
+      window.location.reload();
+    });
+  });
+} else {
+  cartItemsContainer.innerHTML = '<p>Your cart is empty!</p>';
 }
-    </script>
-  </body>
+
+// Update total price
+totalPriceElement.textContent = `Total: $${totalPrice.toFixed(2)}`;
+
+  </script>
+</body>
 </html>
